Use a virtual thread executor by default
This switches to a virtual thread executor for background I/O
operations.